specific case region id check